- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    5.5.1, 5.9.0
 - 
    VxWorks7, linux
 
On EGLFS platform integration the keyboard modifiers on mouse events are incorrect when for example Ctrl or Shift key is pressed and released and them mouse buttons is pressed.
Here is how to reproduce:
1. Build Qt with EGLFS plugin
2. Build the test application against Qt
3. Start the test application with parameter '-platform eglfs'
4. Press Mouse button.
5. Press Ctrl button from keyboard
6. Press Mouse button.
Here is sequence (mouse click - Ctrl click - mouse click) from the test application attached:
MainView::mousePressEvent - modifiers: QFlags<Qt::KeyboardModifiers>(NoModifier) MainView::mouseReleaseEvent - modifiers: QFlags<Qt::KeyboardModifiers>(NoModifier) MainView::keyPressEvent - key: 0x1000021, ControlModifier MainView::keyReleaseEvent - key: 0x1000021, NoModifier MainView::mousePressEvent - modifiers: QFlags<Qt::KeyboardModifiers>(ControlModifier) MainView::mouseReleaseEvent - modifiers: QFlags<Qt::KeyboardModifiers>(ControlModifier)
- relates to
 - 
                    
QTBUG-48293 evdevkeyboard caps lock handling results in bogus shift modifier
-         
 - Open
 
 -         
 - 
                    
QTBUG-35632 Keyboard modifiers do not work in keyPressEvent
-         
 - Closed
 
 -         
 - 
                    
QTBUG-47088 evdev input doesnt work right with several modifiers
-         
 - Closed
 
 -         
 
1. 
 | 
                                            Test keyboard modifiers fix |     
             | 
                                            Closed | Tuomas Heimonen (Inactive) | 
  | 
                    
| For Gerrit Dashboard: QTBUG-60694 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 214095,3 | Report modifiers correctly in mouse events with evdev and libinput | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 | 
| 225410,3 | Fix for mouse with modifiers handling | 5.11 | qt/qtbase | Status: MERGED | +2 | 0 |